sample_nginx_server/base/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx-deployment
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.k8s.local
    http:
      paths:
      - backend:
          service:
            name: nginx-deployment
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
